--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   google_fonts: ^6.3.1
+  dio: ^5.9.0
+  shared_preferences: ^2.5.3
+
+
+
+  #Otp input
+  encrypt: ^5.0.3
+  json_annotation: ^4.9.0
 
 dev_dependencies:
+  build_runner: ^2.4.0
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
 
@@ -53,6 +63,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
