--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   json_annotation: ^4.9.0
   country_picker: ^2.0.27
   file_picker: ^10.3.2
+  pdfx: ^2.9.2
+  path_provider: ^2.1.5
+  open_filex: ^4.7.0
 
 dev_dependencies:
   build_runner: ^2.4.0
