--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,13 @@ dependencies:
   pdfx: ^2.9.2
   path_provider: ^2.1.5
   open_filex: ^4.7.0
+  firebase_core: ^4.1.0
+  firebase_messaging: ^16.0.1
+  flutter_local_notifications: ^19.4.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  get_it: ^8.2.0
+  lottie: ^3.3.2
 
 dev_dependencies:
   build_runner: ^2.4.0
@@ -81,6 +88,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/ 
+    - assets/lottie/ 
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
