--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   hive_flutter: ^1.1.0
   get_it: ^8.2.0
   lottie: ^3.3.2
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   build_runner: ^2.4.0
@@ -114,3 +115,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/MavX Icon (Realism).png"
+  min_sdk_android: 21 
+  remove_alpha_ios: true
+  adaptive_icon_background: "#FFFFFF"  
+  adaptive_icon_foreground: "assets/images/MavX Icon (Realism).png"  
+  round_icon: true 
