--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,11 +56,15 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_messaging: ^16.0.1
   flutter_local_notifications: ^19.4.1
+  cloud_firestore: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   get_it: ^8.2.0
   lottie: ^3.3.2
   flutter_launcher_icons: ^0.14.4
+  firebase_auth: ^6.1.2
+  google_sign_in: ^7.2.0
+  linkedin_login: ^3.1.3
 
 dev_dependencies:
   build_runner: ^2.4.0
