--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   firebase_auth: ^6.1.2
   google_sign_in: ^7.2.0
   linkedin_login: ^3.1.3
+  signin_with_linkedin: ^2.0.1
 
 dev_dependencies:
   build_runner: ^2.4.0
