--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   google_sign_in: ^7.2.0
   linkedin_login: ^3.1.3
   signin_with_linkedin: ^2.0.1
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   build_runner: ^2.4.0
